--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,12 +20,16 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
  
-  <servlet-mapping >
+   <servlet-mapping >
     <servlet-name>spring-mvc</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
- 
+  <!--  
+  <servlet-mapping>
+    <servlet-name>spring-mvc</servlet-name>
+    <url-pattern>*.do</url-pattern>
+</servlet-mapping>
+ -->
 
 </web-app>
 
