--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,23 +7,35 @@
     version="3.0">
     <display-name>Servlet 3.0 Web Application</display-name>
     
+    <welcome-file-list>
+<welcome-file>index.jsp</welcome-file>
+</welcome-file-list>
+
  <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>/WEB-INF/spring-mvc-servlet.xml</param-value>
     </context-param>
    
+ 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
       
   <servlet>
     <servlet-name>spring-mvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    
+    <init-param>
+                <param-name>contextConfigLocation</param-name>
+                <param-value>/WEB-INF/spring-mvc-servlet.xml</param-value>
+     </init-param>
+ 
     <load-on-startup>1</load-on-startup>
   </servlet>
  
    <servlet-mapping >
     <servlet-name>spring-mvc</servlet-name>
     <url-pattern>/</url-pattern>
-  </servlet-mapping>
+   </servlet-mapping>
   <!--  
   <servlet-mapping>
     <servlet-name>spring-mvc</servlet-name>
